--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <!-- область html -->
 <body>
-	<div style="height: 100%;" id="root"></div>
+	<div style="height: 100%;" id="task-mkb-field"></div>
 </body>
 
 <!-- подключение скриптов -->
